<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:popularMovie="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">

    <item android:id="@+id/popular"
          android:title="@string/action_popular"
          android:orderInCategory="100"
          popularMovie:showAsAction="never"/>
    <item android:id="@+id/top_rated"
          android:title="@string/action_top_rated"
          android:orderInCategory="101"
          popularMovie:showAsAction="never"/>
    <item android:id="@+id/favourite"
          android:title="@string/action_favourite"
          android:orderInCategory="102"
          popularMovie:showAsAction="never"/>

</menu>