<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <me.henrytao.smoothappbarlayout.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="@dimen/app_bar_height">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_detail_description"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        tools:src="@mipmap/ic_launcher"/>

                    <TextView
                        android:id="@+id/release_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/image_detail"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/release_string"
                        android:textSize="@dimen/default_text_size"/>

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/image_detail"
                        android:layout_below="@+id/release_date_text"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:textSize="@dimen/date_text_size"/>

                    <TextView
                        android:id="@+id/user_rating_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/release_date"
                        android:layout_toEndOf="@id/image_detail"
                        android:layout_marginStart="16dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/default_text_size"
                        android:text="@string/rating_text"/>

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_rating_text"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/image_detail"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/date_text_size"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/overview_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
                        android:textSize="@dimen/date_text_size"
                        android:textStyle="bold"
                        android:text="@string/overview_string"/>

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:padding="8dp"/>

                    <TextView
                        android:id="@+id/trailer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:paddingTop="8dp"
                        android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
                        android:textSize="@dimen/date_text_size"
                        android:textStyle="bold"
                        android:text="@string/trailer_text"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/detail_horizon_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="true"
                        android:nestedScrollingEnabled="false">
                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/review_content_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="@dimen/space_size_padding"
                        android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
                        android:textSize="@dimen/date_text_size"
                        android:textStyle="bold"
                        android:text="@string/review_title"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/review_dialog_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="true"
                        android:nestedScrollingEnabled="false">
                </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </me.henrytao.smoothappbarlayout.widget.NestedScrollView>

    <include
        android:id="@+id/collapsed_toolbar_include"
        layout="@layout/collapsing_toolbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favourite_fb_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchor="@id/smooth_app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"/>

</android.support.design.widget.CoordinatorLayout>

